--- a/debian-minimal/dab.conf
+++ b/debian-minimal/dab.conf
@@ -2,9 +2,9 @@ Suite: buster
 CacheDir: ../cache
 Architecture: amd64
 Name: debian-10-minimal
-Version: 10.9-1
-Section: system
+Version: TBD
+Section: custom
 Maintainer: Matthew Edwards <matthew@matthewedwards.co.nz>
-Infopage: https://github.com/mje-nz/infrastructure
+Infopage: https://github.com/mje-nz/pve-appliances
 Description: Debian 10 Buster (minimal)
  A minimal Debian Buster system.
